# VickersHardnessPrediction

./: LICENSE  README.md  disilicides8_des.xlsx  elementsnew.csv  elementsnew.xlsx  generate_des.py  hv_comp_load.xlsx  hv_des.xlsx  hv_prediction.py  parity_err.html  plotting.py  pred_hv_descriptors.xlsx  predicted_hv.csv  pyproject.toml  requirements.txt
figures/: parity_ci_cv.html  parity_err.html  parity_err_calib.html  parity_stderr_calib_cv.html  parity_stderr_cv.html
results/: cv-results.csv  predicted_hv.csv
vickers_hardness/: __init__.py  generate_des.py  hv_cv.py  vickers_hardness_.py
vickers_hardness/data/: hv_comp_load.csv  hv_des.csv
vickers_hardness/tests/: test_vickers_hardness.py
vickers_hardness/utils/: uncertainty.py
