[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vickers_hardness"
authors = [
    {name = "Ziyan Zhang"},
    {name = "Sterling G. Baird", email = "sterling.baird@utah.edu"}
    ]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    ]
dynamic = ["version", "description"]

dependencies = [
    "plotly",
    "python-kaleido",
    "pandas",
    "pymatgen",
    "matplotlib",
    "numpy",
    "scikit_learn",
    "uncertainty_toolbox",
    "xgboost",
    "shap_hypetune",
]

[project.urls]
Home = "https://github.com/sparks-baird/vickers_hardness"
